<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#c6dcbd"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="Smart Irrigation System"
        app:titleTextColor="@android:color/white" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/myToolbar">

        <LinearLayout
            android:id="@+id/setnotidicationcontainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motor_is"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:textSize="16sp"
                    android:id="@+id/txtMotorStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/motor_is_currently_off"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:id="@+id/myLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/field_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/field_1_moisture_level"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="200sp"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/app_name" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/field_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/field_2_moisture_level"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageViewTwo"
                        android:layout_width="match_parent"
                        android:layout_height="200sp"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/app_name" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/level_scale"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="11sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/critical_moisture"
                        android:textColor="#605757"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:textSize="11sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_moisture"
                        android:textColor="#605757"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:textSize="11sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good_moisture"
                        android:textColor="#605757"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />


                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/snlevel1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
             >

                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/set_notification_nlevel_0_99"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/zero"
                    android:layout_marginStart="3dp"
                    android:textSize="10sp"
                    android:layout_toEndOf="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/_0_99"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds,SmallSp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/zero"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="Autofill,LabelFor" />

                <Button
                    android:textSize="13sp"
                    android:id="@+id/button"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/cardview_bg_curved"
                    android:text="@string/set"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="13sp"
                    android:id="@+id/textviewnotificationset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_notification_level"
                    android:textColor="#605757"
                    android:textStyle="bold" />

                <TextView
                    android:textSize="13sp"
                    android:id="@+id/settednotificationid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/na"
                    android:textColor="@android:color/black"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <LinearLayout
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_bg"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/switches"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/switches_bg"
                    android:padding="6dp"
                    android:text="@string/motor"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Switch
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:id="@+id/field_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/field_1"
                    android:textColor="#3C3B3B"
                    android:textStyle="bold" />

                <Switch
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:id="@+id/field_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/field_2"
                    android:textColor="#3C3B3B"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtAboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/about_us"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>